// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render List correctly with no items 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ProjectContextProvider>
      <ListContextProvider>
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <List>
            <section
              className="list"
            >
              <div
                className="container"
              >
                <ListFilters>
                  <div
                    className="filters"
                  >
                    <input
                      className="filters__item"
                      onChange={[Function]}
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </div>
                </ListFilters>
                <ListTable
                  filteredItems={Array []}
                >
                  <div
                    className="list__proyect-table"
                  >
                    <ListHeader>
                      <div
                        className="list__header"
                      >
                        <div
                          className="list__header-item"
                        >
                          <div
                            className="list__name"
                            onClick={[Function]}
                          >
                            <span>
                              Name
                            </span>
                            <i
                              className="fas fa-sort-down"
                            />
                          </div>
                          <p
                            className="list__status"
                          >
                            Status
                          </p>
                          <div
                            className="list__invoice"
                            onClick={[Function]}
                          >
                            <span>
                              Invoice
                            </span>
                            <i
                              className="fas fa-sort-down"
                            />
                          </div>
                          <p
                            className="list__dropdown"
                          >
                            Options
                          </p>
                        </div>
                      </div>
                    </ListHeader>
                    <ListBody
                      currentItems={Array []}
                    >
                      <div
                        className="list__body"
                      />
                    </ListBody>
                  </div>
                </ListTable>
                <Pagination
                  pageNeighbours={1}
                  totalItems={0}
                >
                  <div
                    className="pagination"
                  >
                    <PaginationFilter>
                      <div
                        className="pagination__limit"
                      >
                        <select
                          className="filters__item"
                          onChange={[Function]}
                          value={5}
                        >
                          <option
                            value="2"
                          >
                            2 items
                          </option>
                          <option
                            value="5"
                          >
                            5 items
                          </option>
                          <option
                            value="10"
                          >
                            10 items
                          </option>
                          <option
                            value="20"
                          >
                            20 items
                          </option>
                        </select>
                      </div>
                    </PaginationFilter>
                    <PaginationPages
                      pageNeighbours={1}
                      pages={Array []}
                      totalPages={0}
                    >
                      <nav
                        className="pagination__pages"
                      >
                        <ul />
                      </nav>
                    </PaginationPages>
                  </div>
                </Pagination>
              </div>
            </section>
          </List>
        </Provider>
      </ListContextProvider>
    </ProjectContextProvider>
  </Router>
</MemoryRouter>
`;

exports[`Should render List correctly with proyects 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ProjectContextProvider>
      <ListContextProvider>
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <List>
            <section
              className="list"
            >
              <div
                className="container"
              >
                <ListFilters>
                  <div
                    className="filters"
                  >
                    <input
                      className="filters__item"
                      onChange={[Function]}
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </div>
                </ListFilters>
                <ListTable
                  filteredItems={
                    Array [
                      Object {
                        "color": "green",
                        "description": "This is my proyect fixure 1",
                        "endDate": 1616108400000,
                        "id": "p1",
                        "invoice": "100",
                        "name": "Proyect 1",
                        "startDate": 1615762800000,
                        "status": "todo",
                      },
                      Object {
                        "color": "red",
                        "description": "This is my proyect fixure 2",
                        "endDate": 1616540400000,
                        "id": "p2",
                        "invoice": "200",
                        "name": "Proyect 2",
                        "startDate": 1616194800000,
                        "status": "doing",
                      },
                      Object {
                        "color": "blue",
                        "description": "This is my proyect fixure 3",
                        "endDate": 1616968800000,
                        "id": "p3",
                        "invoice": "300",
                        "name": "Proyect 3",
                        "startDate": 1616626800000,
                        "status": "done",
                      },
                    ]
                  }
                >
                  <div
                    className="list__proyect-table"
                  >
                    <ListHeader>
                      <div
                        className="list__header"
                      >
                        <div
                          className="list__header-item"
                        >
                          <div
                            className="list__name"
                            onClick={[Function]}
                          >
                            <span>
                              Name
                            </span>
                            <i
                              className="fas fa-sort-down"
                            />
                          </div>
                          <p
                            className="list__status"
                          >
                            Status
                          </p>
                          <div
                            className="list__invoice"
                            onClick={[Function]}
                          >
                            <span>
                              Invoice
                            </span>
                            <i
                              className="fas fa-sort-down"
                            />
                          </div>
                          <p
                            className="list__dropdown"
                          >
                            Options
                          </p>
                        </div>
                      </div>
                    </ListHeader>
                    <ListBody
                      currentItems={
                        Array [
                          Object {
                            "color": "green",
                            "description": "This is my proyect fixure 1",
                            "endDate": 1616108400000,
                            "id": "p1",
                            "invoice": "100",
                            "name": "Proyect 1",
                            "startDate": 1615762800000,
                            "status": "todo",
                          },
                          Object {
                            "color": "red",
                            "description": "This is my proyect fixure 2",
                            "endDate": 1616540400000,
                            "id": "p2",
                            "invoice": "200",
                            "name": "Proyect 2",
                            "startDate": 1616194800000,
                            "status": "doing",
                          },
                          Object {
                            "color": "blue",
                            "description": "This is my proyect fixure 3",
                            "endDate": 1616968800000,
                            "id": "p3",
                            "invoice": "300",
                            "name": "Proyect 3",
                            "startDate": 1616626800000,
                            "status": "done",
                          },
                        ]
                      }
                    >
                      <div
                        className="list__body"
                      >
                        <ListItem
                          color="green"
                          description="This is my proyect fixure 1"
                          endDate={1616108400000}
                          id="p1"
                          invoice="100"
                          key="p1"
                          name="Proyect 1"
                          startDate={1615762800000}
                          status="todo"
                        >
                          <div
                            className="list__body-item"
                            key="p1"
                          >
                            <Link
                              className="list__name"
                              data-id="p1"
                              onClick={[Function]}
                              to="/proyect/p1"
                            >
                              <LinkAnchor
                                className="list__name"
                                data-id="p1"
                                href="/proyect/p1"
                                navigate={[Function]}
                                onClick={[Function]}
                              >
                                <a
                                  className="list__name"
                                  data-id="p1"
                                  href="/proyect/p1"
                                  onClick={[Function]}
                                >
                                  Proyect 1
                                </a>
                              </LinkAnchor>
                            </Link>
                            <p
                              className="list__status list__status--todo"
                            >
                              todo
                            </p>
                            <p
                              className="list__invoice"
                            >
                              100
                            </p>
                            <ListDropdown
                              id="p1"
                            >
                              <div
                                className="list__dropdown"
                              >
                                <ListDropdownButton
                                  onButtonClicked={[Function]}
                                >
                                  <div
                                    className="list__dropdown-button"
                                    onClick={[Function]}
                                  >
                                    <i
                                      className="fas fa-sliders-h"
                                    />
                                    <i
                                      className="fas fa-sort-down"
                                    />
                                  </div>
                                </ListDropdownButton>
                                <ListDropdownContent
                                  id="p1"
                                  onListClicked={[Function]}
                                  open={false}
                                />
                              </div>
                            </ListDropdown>
                          </div>
                        </ListItem>
                        <ListItem
                          color="red"
                          description="This is my proyect fixure 2"
                          endDate={1616540400000}
                          id="p2"
                          invoice="200"
                          key="p2"
                          name="Proyect 2"
                          startDate={1616194800000}
                          status="doing"
                        >
                          <div
                            className="list__body-item"
                            key="p2"
                          >
                            <Link
                              className="list__name"
                              data-id="p2"
                              onClick={[Function]}
                              to="/proyect/p2"
                            >
                              <LinkAnchor
                                className="list__name"
                                data-id="p2"
                                href="/proyect/p2"
                                navigate={[Function]}
                                onClick={[Function]}
                              >
                                <a
                                  className="list__name"
                                  data-id="p2"
                                  href="/proyect/p2"
                                  onClick={[Function]}
                                >
                                  Proyect 2
                                </a>
                              </LinkAnchor>
                            </Link>
                            <p
                              className="list__status list__status--doing"
                            >
                              doing
                            </p>
                            <p
                              className="list__invoice"
                            >
                              200
                            </p>
                            <ListDropdown
                              id="p2"
                            >
                              <div
                                className="list__dropdown"
                              >
                                <ListDropdownButton
                                  onButtonClicked={[Function]}
                                >
                                  <div
                                    className="list__dropdown-button"
                                    onClick={[Function]}
                                  >
                                    <i
                                      className="fas fa-sliders-h"
                                    />
                                    <i
                                      className="fas fa-sort-down"
                                    />
                                  </div>
                                </ListDropdownButton>
                                <ListDropdownContent
                                  id="p2"
                                  onListClicked={[Function]}
                                  open={false}
                                />
                              </div>
                            </ListDropdown>
                          </div>
                        </ListItem>
                        <ListItem
                          color="blue"
                          description="This is my proyect fixure 3"
                          endDate={1616968800000}
                          id="p3"
                          invoice="300"
                          key="p3"
                          name="Proyect 3"
                          startDate={1616626800000}
                          status="done"
                        >
                          <div
                            className="list__body-item"
                            key="p3"
                          >
                            <Link
                              className="list__name"
                              data-id="p3"
                              onClick={[Function]}
                              to="/proyect/p3"
                            >
                              <LinkAnchor
                                className="list__name"
                                data-id="p3"
                                href="/proyect/p3"
                                navigate={[Function]}
                                onClick={[Function]}
                              >
                                <a
                                  className="list__name"
                                  data-id="p3"
                                  href="/proyect/p3"
                                  onClick={[Function]}
                                >
                                  Proyect 3
                                </a>
                              </LinkAnchor>
                            </Link>
                            <p
                              className="list__status list__status--done"
                            >
                              done
                            </p>
                            <p
                              className="list__invoice"
                            >
                              300
                            </p>
                            <ListDropdown
                              id="p3"
                            >
                              <div
                                className="list__dropdown"
                              >
                                <ListDropdownButton
                                  onButtonClicked={[Function]}
                                >
                                  <div
                                    className="list__dropdown-button"
                                    onClick={[Function]}
                                  >
                                    <i
                                      className="fas fa-sliders-h"
                                    />
                                    <i
                                      className="fas fa-sort-down"
                                    />
                                  </div>
                                </ListDropdownButton>
                                <ListDropdownContent
                                  id="p3"
                                  onListClicked={[Function]}
                                  open={false}
                                />
                              </div>
                            </ListDropdown>
                          </div>
                        </ListItem>
                      </div>
                    </ListBody>
                  </div>
                </ListTable>
                <Pagination
                  pageNeighbours={1}
                  totalItems={3}
                >
                  <div
                    className="pagination"
                  >
                    <PaginationFilter>
                      <div
                        className="pagination__limit"
                      >
                        <select
                          className="filters__item"
                          onChange={[Function]}
                          value={5}
                        >
                          <option
                            value="2"
                          >
                            2 items
                          </option>
                          <option
                            value="5"
                          >
                            5 items
                          </option>
                          <option
                            value="10"
                          >
                            10 items
                          </option>
                          <option
                            value="20"
                          >
                            20 items
                          </option>
                        </select>
                      </div>
                    </PaginationFilter>
                    <PaginationPages
                      pageNeighbours={1}
                      pages={
                        Array [
                          1,
                        ]
                      }
                      totalPages={1}
                    >
                      <nav
                        className="pagination__pages"
                      >
                        <ul>
                          <PaginationPageItem
                            key="0"
                            page={1}
                            pageNeighbours={1}
                            totalPages={1}
                          >
                            <li>
                              <a
                                className="pagination__active-page"
                                onClick={[Function]}
                              >
                                1
                              </a>
                            </li>
                          </PaginationPageItem>
                        </ul>
                      </nav>
                    </PaginationPages>
                  </div>
                </Pagination>
              </div>
            </section>
          </List>
        </Provider>
      </ListContextProvider>
    </ProjectContextProvider>
  </Router>
</MemoryRouter>
`;
